src/objects/Account_Commercial_Strategy_Results__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Commercial Strategy Results</relationshipLabel>
        <relationshipName>Account_Commercial_Strategy_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>category_type__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <formula>CASE(UPPER( category_type__c ),&apos;BONIFICACIÓN&apos;,1,&apos;RECURSOS&apos;,2,&apos;SERVICIOS&apos;,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <formula>CASE(MONTH(year_month_day_date__c),1, $Label.Month1ShortName ,2,$Label.Month2ShortName,3,$Label.Month3ShortName,4,$Label.Month4ShortName,5,$Label.Month5ShortName,6,$Label.Month6ShortName,7,$Label.Month7ShortName,8,$Label.Month8ShortName,9,$Label.Month9ShortName,10,$Label.Month10ShortName,11,$Label.Month11ShortName,$Label.Month12ShortName) + &apos; &apos; + RIGHT(TEXT(YEAR(year_month_day_date__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Resumen Vinculación</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>category_type__c</columns>
        <columns>result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACSR-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumen Vinculación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>